--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<!-- do něj přidat <div>y pro samotné držení otázky -->
 	<!-- také nezapomenout na <div> pro výsledek a hodnocení -->
 
-	<script src="kviz.js"></script>
+	<script src="main.js"></script>
 
 </body>
 </html>
