--- a/index.html
+++ b/index.html
@@ -8,21 +8,28 @@
 	<title>Superkvíz</title>
 	<link rel="stylesheet" href="style.css">
 </head>
-<body>
-
+<body >
 
 	<h1>Superkvíz</h1>
 
 	<!-- přidat <div> pro kvíz -->
-	<div id="kviz">
+	<div class="kviz">
 		<!-- do něj přidat <div>y pro samotné držení otázky -->
-		<div id="otazka">Kdo je nejkrasnejsi?
+		
+		<div id="otazka">
+			<div id="poradi"><span>1</span>/3
+				</div>
+			<h2>Kdo je nejkrasnejsi?
+				</h2>
+			<img id="obrazek" src="obrazky/pivo.jpg">
+			<div id="moznosti">
+				<ul id="odpovedi">
+					<li id="odpoved-0" onclick="klik0()">Ledová královna</li>
+					<li id="odpoved-1" onclick="klik1()">Sněhurka</li>
+					<li id="odpoved-2" onclick="klik2()">Já, já jsem nejkrásnější!</li>
+				</ul>				
+			</div>
 		</div>
-		<ul id="odpovedi">
-			<li data-odpoved="0">Ledová královna</li>
-			<li data-odpoved="1">Sněhurka</li>
-			<li data-odpoved="2">Já, já jsem nejkrásnější!</li>
-		</ul>	
 	</div>
 	<!-- také nezapomenout na <div> pro výsledek a hodnocení -->
 	<div id="vysledek"></div>
