--- a/index.html
+++ b/index.html
@@ -19,16 +19,17 @@
 		<div id="moznosti">
 			<div id="poradi"><span>1</span>/3
 				</div>
-			<div id="otazka"><h2>prvni
+			<div id="otazka"><h2>Animovaný dětský televizní seriál Bing je...
 				</h2></div>
 			<img id="obrazek" src="obrazky/moncicak.jpg">
 			<ul id="odpovedi" onclick="klik(event)">
-				<li id="odpoved-0">prvniO</li>
-				<li id="odpoved-1">druhaO</li>
-				<li id="odpoved-2">tretiO</li>
+				<li id="odpoved-0">britského původu dle předloh knih Wilberta Vere Awdrya</li>
+				<li id="odpoved-1">amerického původu. Autory jsou Tad Stones a Alan Zaslove.</li>
+				<li id="odpoved-2">britského původu dle předlohy knih Teda Dewana.</li>
 			</ul>				
 		</div>
 	</div>
+	
 	<!-- také nezapomenout na <div> pro výsledek a hodnocení -->
 	
 	<div class="vysledek">
