--- a/index.html
+++ b/index.html
@@ -29,15 +29,14 @@
 			</ul>				
 		</div>
 	</div>
-	
+
 	<!-- také nezapomenout na <div> pro výsledek a hodnocení -->
 	
 	<div class="vysledek">
 		<h2>Tvoje hodnoceni</h2>
-		<div id="hodnoceni">Ahoj, me to nefunguje...
+		<div id="hodnoceni">
 		</div>
-		<h2>uspesnost</h2>
-		<div id="uspech">bla bla, bude zmenene...</div>
+		<h2 id="uspech">uspesnost</h2>
 	</div>
 
 	<script src="main.js"></script>
