uprava vyhledu a diakritiky

--- a/index.html
+++ b/index.html
@@ -12,31 +12,25 @@
 
 	<h1>Superkvíz</h1>
 
-	<!-- přidat <div> pro kvíz -->
 	<div class="kviz">
-		<!-- do něj přidat <div>y pro samotné držení otázky -->
-		
-		<div id="moznosti">
-			<div id="poradi"><span>1</span>/3
+			<div id="poradi">Otázka <span>1</span>/3
 				</div>
 			<div id="otazka"><h2>Animovaný dětský televizní seriál Bing je...
 				</h2></div>
-			<img id="obrazek" src="obrazky/moncicak.jpg">
+		<div id="moznosti"><img id="obrazek" src="obrazky/bing2.jpg">
 			<ul id="odpovedi" onclick="klik(event)">
-				<li id="odpoved-0">britského původu dle předloh knih Wilberta Vere Awdrya</li>
-				<li id="odpoved-1">amerického původu. Autory jsou Tad Stones a Alan Zaslove.</li>
-				<li id="odpoved-2">britského původu dle předlohy knih Teda Dewana.</li>
+				<li id="odpoved-0">britského původu.</li>
+				<li id="odpoved-1">amerického původu.</li>
+				<li id="odpoved-2">čínského původu.</li>
 			</ul>				
 		</div>
 	</div>
 
-	<!-- také nezapomenout na <div> pro výsledek a hodnocení -->
-	
 	<div class="vysledek">
-		<h2>Tvoje hodnoceni</h2>
+		<h2>Tvoje hodnocení</h2>
 		<div id="hodnoceni">
 		</div>
-		<h2 id="uspech">uspesnost</h2>
+		<h2 id="uspech"></h2>
 	</div>
 
 	<script src="main.js"></script>
