--- a/index.html
+++ b/index.html
@@ -13,17 +13,12 @@
 	<h1>Superkvíz</h1>
 
 	<div class="kviz">
-			<div id="poradi">Otázka <span>1</span>/3
-				</div>
-			<div id="otazka"><h2>Animovaný dětský televizní seriál Bing je...
-				</h2></div>
-		<div id="moznosti"><img id="obrazek" src="obrazky/bing2.jpg">
-			<ul id="odpovedi" onclick="klik(event)">
-				<li id="odpoved-0">britského původu.</li>
-				<li id="odpoved-1">amerického původu.</li>
-				<li id="odpoved-2">čínského původu.</li>
-			</ul>				
-		</div>
+			<div id="poradi">
+			</div>
+			<h2 id="otazka">
+			</h2>
+			<img id="obrazek"src="#">
+			<ul id="odpovedi"></ul>				
 	</div>
 
 	<div class="vysledek">
